-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 1.9.x
-
Fix Version/s: 1.9.3
-
Component/s: libsvn_repos
-
Labels:
See the email thread "No-op changes no longer dumped by 'svnadmin dump' in 1.9" started by Johan Corveleyn on 2015-09-21 on the dev@ email list, archived at e.g. http://svn.haxx.se/dev/archive-2015-09/0269.shtml or
http://mail-archives.apache.org/mod_mbox/subversion-dev/201509.mbox/%3CCAB84uBVe8QnEpbPVAb__yQjiDDoYjFn2+M9mPcdBXZCwMCpOLw@mail.gmail.com%3E